--- a/jdbc-practices/pom.xml
+++ b/jdbc-practices/pom.xml
@@ -13,4 +13,16 @@
 	<maven.compiler.source>17</maven.compiler.source>
 	<maven.compiler.target>17</maven.compiler.target>
   </properties>
+  
+  <dependencies>
+	<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+	<dependency>
+    	<groupId>org.mariadb.jdbc</groupId>
+    	<artifactId>mariadb-java-client</artifactId>
+    	<version>3.2.0</version>
+	</dependency>
+	
+	
+
+  </dependencies>
 </project>
