--- a/jdbc-practices/pom.xml
+++ b/jdbc-practices/pom.xml
@@ -21,7 +21,14 @@
     	<artifactId>mariadb-java-client</artifactId>
     	<version>3.2.0</version>
 	</dependency>
-	
+	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+	<dependency>
+	    <groupId>org.junit.jupiter</groupId>
+	    <artifactId>junit-jupiter-api</artifactId>
+	    <version>5.10.2</version>
+	    <scope>test</scope>
+	</dependency>
+
 	
 
   </dependencies>
